make my profile prettier

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
           <h1>Adrien Pointillart</h1>
           <h2>--- <b>PROGRAMMER</b>  ---</h2>
           <h2>(Coming soon...)</h2>
-          <p>After few years working in Digital Marketing and CRM in Paris for 1000mercis then at e-TF1, I decided to move to Myanmar for a taste of adventure. <br>I spent 7 wonderful years in this beautiful country. <br>Among other things, I launched the first OTT (live/replay streaming) app for the largest TV channels in the country. <br>I am now back in France and committed to start a new entrepreneurial adventure. Passionate about digital, I want to learn coding and meet other passionated and adventurous people to collaborate with on new innovative digital products.</p>
+          <p>🇲🇲 Spent the last 7 years in Myanmar</p>
+          <p>🍜 Love cooking...</p>
+          <p>...and golf! 🏌️</p>
+          <p>💻 Currently learning how to code! 🤓</p>
           <a href="" target="_blank" class="btn-main">USELESS BUTTON!</a>
         </div>
         <div class="card">
