make my profile prettier

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
           <h1>Adrien Pointillart</h1>
           <h2>--- <b>PROGRAMMER</b>  ---</h2>
           <h2>(Coming soon...)</h2>
-          <p>🇲🇲 Spent the last 7 years in Myanmar</p>
-          <p>🍜 Love cooking...</p>
-          <p>...and golf! 🏌️</p>
-          <p>💻 Currently learning how to code! 🤓</p>
-          <a href="" target="_blank" class="btn-main">USELESS BUTTON!</a>
+          <p>🇲🇲 Spent the last 7 years in Myanmar<br>
+          🍜 Love cooking...<br>
+          ...and golf! 🏌️<br>
+          💻 Currently learning how to code! 🤓</p>
+          <div class="btn-main">
+            <a href="" target="_blank">USELESS BUTTON!</a>
+          </div>
         </div>
         <div class="card">
           <h3>Follow me!</h2>
